examples/errors/instance_type_error_2.ik
type Count class:
    fn count(Self) Int

instance Count Bool:
    fn count(self):
        // bad usage of `self`
        return self + 1

fn main():
    print("")
